--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,7 @@
 	Thx - Hardy
 
 -->
+    <string name="shared_string_saved">saved</string>
     <string name="turn_screen_on_router">Wake on turn</string>
     <string name="turn_screen_on_time_descr">Set the time for which the screen will turn on.</string>
     <string name="turn_screen_on_sensor">Use proximity sensor</string>
