--- a/OsmAnd/res/values-cs/strings.xml
+++ b/OsmAnd/res/values-cs/strings.xml
@@ -2885,15 +2885,15 @@ Zobrazená oblast: %1$s x %2$s</string>
     <string name="add_home">Přidat domov</string>
     <string name="add_work">Přidat práci</string>
     <string name="work_button">Práce</string>
-    <string name="route_class_stat_container">Třída</string>
-    <string name="route_surface_stat_container">Povrch</string>
-    <string name="route_smoothness_stat_container">Hladkost povrchu</string>
-    <string name="route_steepness_stat_container">Strmost</string>
+    <string name="routeInfo_roadClass_name">Třída</string>
+    <string name="routeInfo_surface_name">Povrch</string>
+    <string name="routeInfo_smoothness_name">Hladkost povrchu</string>
+    <string name="routeInfo_steepness_name">Strmost</string>
     <string name="show_more">Ukaž více</string>
     <string name="tracks_on_map">Zobrazené trasy</string>
     <string name="time_of_day">Denní doba</string>
     <string name="step_by_step">Krok za krokem</string>
-    <string name="road_types">Typy silnic</string>
+    <string name="routeInfo_road_types_name">Typy silnic</string>
     <string name="exit_at">Výjezd na</string>
     <string name="shared_string_swap">Vyměnit</string>
     <string name="quick_action_show_hide_gpx_tracks">Zobrazit/skrýt GPX trasy</string>
