--- a/OsmAnd/res/values-fr/strings.xml
+++ b/OsmAnd/res/values-fr/strings.xml
@@ -2880,10 +2880,10 @@ représentant la zone : %1$s x %2$s</string>
     <string name="shared_string_capacity">Сapacité</string>
     <string name="shared_string_width">Largeur</string>
     <string name="shared_string_height">Hauteur</string>
-    <string name="route_class_stat_container">Classe</string>
-    <string name="route_surface_stat_container">Surface</string>
-    <string name="route_smoothness_stat_container">Régularité</string>
-    <string name="route_steepness_stat_container">Pente</string>
+    <string name="routeInfo_roadClass_name">Classe</string>
+    <string name="routeInfo_surface_name">Surface</string>
+    <string name="routeInfo_smoothness_name">Régularité</string>
+    <string name="routeInfo_steepness_name">Pente</string>
     <string name="add_home">Ajouter domicile</string>
     <string name="add_work">Ajouter travail</string>
     <string name="work_button">Travail</string>
@@ -2895,7 +2895,7 @@ représentant la zone : %1$s x %2$s</string>
     <string name="time_of_day">Heure de la journée</string>
     <string name="by_transport_type">Par %1$s</string>
     <string name="step_by_step">Pas à pas</string>
-    <string name="road_types">Types de route</string>
+    <string name="routeInfo_road_types_name">Types de route</string>
     <string name="exit_at">Sortir à</string>
     <string name="quick_action_show_hide_gpx_tracks">Afficher / masquer les traces GPX</string>
     <string name="quick_action_gpx_tracks_hide">Masquer les traces GPX</string>
