--- a/OsmAnd/res/values-pl/strings.xml
+++ b/OsmAnd/res/values-pl/strings.xml
@@ -2909,17 +2909,17 @@ Reprezentuje obszar: %1$s x %2$s</string>
     <string name="quick_action_switch_day_mode">Tryb Dzienny</string>
     <string name="quick_action_switch_night_mode">Tryb Nocny</string>
     <string name="quick_action_day_night_switch_mode">Zmień tryb Dzienny/Nocny</string>
-    <string name="route_class_stat_container">Kategoria</string>
-    <string name="route_surface_stat_container">Powierzchnia</string>
-    <string name="route_smoothness_stat_container">Wygładzanie</string>
-    <string name="route_steepness_stat_container">Nachylenie</string>
+    <string name="routeInfo_roadClass_name">Kategoria</string>
+    <string name="routeInfo_surface_name">Powierzchnia</string>
+    <string name="routeInfo_smoothness_name">Wygładzanie</string>
+    <string name="routeInfo_steepness_name">Nachylenie</string>
     <string name="add_home">Dodaj dom</string>
     <string name="add_work">Dodaj pracę</string>
     <string name="work_button">Praca</string>
     <string name="time_of_day">Pora dnia</string>
     <string name="by_transport_type">Użyto %1$s</string>
     <string name="step_by_step">Krok po kroku</string>
-    <string name="road_types">Typy dróg</string>
+    <string name="routeInfo_road_types_name">Typy dróg</string>
     <string name="exit_at">Opuść na</string>
     <string name="sit_on_the_stop">Tablica na przystanku</string>
     <string name="shared_string_swap">Wymień</string>
