--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,15 @@
 	Thx - Hardy
 
 -->
+    <string name="rendering_attr_winter_road_name">Winter road</string>
+    <string name="rendering_attr_ice_road_name">Ice road</string>
+    <string name="routeInfo_winter_ice_road_name">Winter and ice roads</string>
+    <string name="rendering_attr_tracktype_grade1_name">Solid (paved)</string>
+    <string name="rendering_attr_tracktype_grade2_name">Solid (unpaved)</string>
+    <string name="rendering_attr_tracktype_grade3_name">Mostly solid</string>
+    <string name="rendering_attr_tracktype_grade4_name">Mostly soft</string>
+    <string name="rendering_attr_tracktype_grade5_name">Soft</string>
+    <string name="routeInfo_tracktype_name">Surface firmness</string>
     <string name="shared_string_file_is_saved">%s is saved</string>
     <string name="shared_string_open_track">Open track</string>
     <string name="shared_string_track_is_saved">Track %s is saved</string>
