--- a/OsmAnd/res/values-ru/strings.xml
+++ b/OsmAnd/res/values-ru/strings.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="rendering_attr_winter_road_name">Автозимник</string>
+    <string name="rendering_attr_ice_road_name">Ледовый автозимник</string>
+    <string name="routeInfo_winter_ice_road_name">Зимники</string>
+    <string name="rendering_attr_tracktype_grade1_name">Твёрдое</string>
+    <string name="rendering_attr_tracktype_grade2_name">Почти твёрдое</string>
+    <string name="rendering_attr_tracktype_grade3_name">Смешанное</string>
+    <string name="rendering_attr_tracktype_grade4_name">Почти мягкое</string>
+    <string name="rendering_attr_tracktype_grade5_name">Мягкое</string>
+    <string name="routeInfo_tracktype_name">Состояние дороги</string>
     <string name="intermediate_waypoint">Промежуточная точка</string>
     <string name="intermediate_destinations">Промежуточные точки</string>
     <string name="arrive_at_time">Прибытие в %1$s</string>
