fix settings navigation no profiles crash

--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,7 @@
 	Thx - Hardy
 
 -->
+    <string name="turn_on_profile_desc">Please turn on at least one application profile, to use this setting.</string>
     <string name="rendering_attr_winter_road_name">Winter road</string>
     <string name="rendering_attr_ice_road_name">Ice road</string>
     <string name="routeInfo_winter_ice_road_name">Winter and ice roads</string>
