--- a/OsmAnd/res/values-ca/strings.xml
+++ b/OsmAnd/res/values-ca/strings.xml
@@ -2372,7 +2372,7 @@ Abasta l\'àrea: %1$s x %2$s</string>
 \n• Mostra variants especials disponibles en línia, imatges de satèl·lit (de Bing), superposicions variades com traces de GPX turístiques/rutes i capes addicionals amb una transparència que es pot ajustar
 \n• Com opció, mostra els noms dels llocs en anglès, llengua local o ortografia fonètica</string>
     <string name="select_street">Selecciona el carrer</string>
-    <string name="shared_string_in_name">dins %@</string>
+    <string name="shared_string_in_name">dins %1$s</string>
     <string name="type_address">Indiqueu l\'adreça</string>
     <string name="osmand_plus_extended_description_part4">Utilitza les dades d\'OSM i de la Viquipèdia
 \n• Informació de qualitat dels millors projectes col·laboratius del món
