--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,6 +11,7 @@
 	Thx - Hardy
 
 -->
+    <string name="calculate_distance_between_segments">Calculate distance between segments</string>
     <string name="temporary_conditional_routing">Consider temporary limitations</string>
     <string name="turn_on_profile_desc">Please turn on at least one application profile, to use this setting.</string>
     <string name="rendering_attr_winter_road_name">Winter road</string>
