--- a/OsmAnd-telegram/res/values/strings.xml
+++ b/OsmAnd-telegram/res/values/strings.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="shared_string_end">End</string>
+    <string name="shared_string_start">Start</string>
+    <string name="shared_string_apply">Apply</string>
+    <string name="set_time_timeline_descr">Select time to display</string>
+    <string name="start_end_date">Start — End date</string>
     <string name="timeline_no_data_descr">We don`t have collected data for the selected day</string>
     <string name="timeline_no_data">No data</string>
     <string name="shared_string_select">Select</string>
