--- a/OsmAnd/res/values/strings.xml
+++ b/OsmAnd/res/values/strings.xml
@@ -11,7 +11,9 @@
 	Thx - Hardy
 -->
 
-
+    <string name="terrain_map">Terrain map</string>
+    <string name="relief_3d">3D Relief</string>
+    <string name="relief_3d_description">Own and observe the scale model of your neighborhood or the whole continent.</string>
     <string name="shared_string_close_the_dialog">Close the dialog</string>
     <string name="routing_attr_allow_via_ferrata_name">Allow via ferrata</string>
     <string name="routing_attr_allow_via_ferrata_description">Allow via ferrata paths.</string>
